
2.0.2
=====

	* Fix padding bug in SHA256; this resulted in bad digests whenever
	  (the number of bytes hashed) mod 64 == 55.

2.0.1
=====

	* Fix SHA256 and RIPEMD on AMD64 platform.
        * Deleted Demo/ directory.
	* Add PublicKey to Crypto.__all__


2.0
===

	* Added SHA256 module contributed by Jeethu Rao, with test data
	  from Taylor Boon.

	* Fixed AES.c compilation problems with Borland C.  
	  (Contributed by Jeethu Rao.)

	* Fix ZeroDivisionErrors on Windows, caused by the system clock
	  not having enough resolution.
	
        * Fix 2.1/2.2-incompatible use of (key not in dict),
	  pointed out by Ian Bicking.

	* Fix FutureWarning in Crypto.Util.randpool, noted by James P Rutledge.

	
1.9alpha6
=========

	* Util.number.getPrime() would inadvertently round off the bit
	  size; if you asked for a 129-bit prime or 135-bit prime, you
	  got a 128-bit prime.

	* Added Util/test/prime_speed.py to measure the speed of prime
 	  generation, and PublicKey/test/rsa_speed.py to measure
	  the speed of RSA operations.

	* Merged the _rsa.c and _dsa.c files into a single accelerator
	  module, _fastmath.c.  

	* Speed improvements: Added fast isPrime() function to _fastmath,
	  cutting the time to generate a 1024-bit prime by a factor of 10.
	  Optimized the C version of RSA decryption to use a longer series
	  of operations that's roughly 3x faster than a single
	  exponentiation.  (Contributed by Joris Bontje.)

	* Added support to RSA key objects for blinding and unblinding 
	  data. (Contributed by Joris Bontje.)

	* Simplified RSA key generation: hard-wired the encryption
	  exponent to 65537 instead of generating a random prime;
	  generate prime factors in a loop until the product 
	  is large enough.
	
	* Renamed cansign(), canencrypt(), hasprivate(), to 
	  can_sign, can_encrypt, has_private.  If people shriek about
	  this change very loudly, I'll add aliases for the old method
	  names that log a warning and call the new method.
	

1.9alpha5